<resources>
    <string name="app_name" translatable="false">微分享</string>
    <string name="loading">正在加载</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>

    <string name="input_company_id">请输入商户号：</string>
    <string name="commission">佣金：</string>
    <string name="comment">评语：</string>

    <string name="username">用户名</string>
    <string name="merchantname">商户名</string>
    <string name="merchantaddress">商户地址</string>
    <string name="password">密码</string>
    <string name="pre_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="comfirm_password">密码确认</string>
    <string name="realname">真实姓名</string>
    <string name="personalid">身份证</string>
    <string name="telephone">手机号</string>
    <string name="sex">性别</string>
    <string name="head">头像</string>
    <string name="business_licence">营业执照</string>
    <string name="legal_personalid">法人身份证</string>
    <string name="email">邮箱</string>
    <string name="roles">角色</string>
    <string name="vericode">验证码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="user_register">新用户注册</string>
    <string name="register">注册</string>
    <string name="balance">账户余额</string>
    <string name="recharge">账户充值</string>


    <string name="string_cannot_null">%1$s不能为空</string>
    <string name="string_cannot_less">%1$s不能少于%2$d位</string>
    <string name="string_cannot_more">%1$s不能多于%2$d位</string>
    <string name="password_comfirm_fail">两次密码输入不一致</string>
    <string name="string_not_regex">%1$s不合规范</string>
    <string name="tel_cannnot_null">手机号不能为空</string>
    <string name="tel_not_confirm">手机号不合规范</string>

    <string name="pre_password_cannot_null">原密码不能为空</string>
    <string name="pre_password_cannot_less6">原密码不能少于6位</string>
    <string name="password_confirm_fail">两次输入的密码必须相同</string>

    <!-- JPush-->
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="load_more_text">正在加载...</string>
    <string name="no_more_text">无更多数据</string>

    <!--citypick-->
    <string name="cp_hint_search_box">请输入城市名或拼音</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_select_city">选择城市</string>
</resources>
