<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:background="#fff">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@drawable/shape_round_sky">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/username"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=":"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size"/>
            <EditText
                android:id="@+id/et_username"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/shape_round_sky"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/password"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=":"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_black"
                android:inputType="textPassword"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/btn_round_selector"
            android:text="@string/login"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_black"
            android:layout_marginTop="20dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_gray"
            android:text="@string/user_register"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</RelativeLayout>