<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="50dp"
    android:background="#fff">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="none">
        <LinearLayout202
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:background="@drawable/shape_round_sky">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <EditText
                    android:id="@+id/et_username"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/text_black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/shape_round_sky"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <EditText
                    android:id="@+id/et_password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/text_black"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/shape_round_sky"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/realname"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=":"
                android:textColor="@color/text_black"
                android:textSize="@dimen/normal_text_size"/>
            <EditText
                android:id="@+id/et_realname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_black"/>
        </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sex"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/rb_male">
                    <RadioButton
                        android:id="@id/rb_male"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="男"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/normal_text_size"/>

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="女"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="5dp"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/head"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <ImageView
                    android:id="@+id/iv_head"
                    android:layout_height="120dp"
                    android:layout_width="90dp"
                    android:layout_marginLeft="10dp"
                    android:background="#000"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_add"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/shape_round_sky"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/personalid"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <EditText
                    android:id="@+id/et_personalid"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/text_black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/shape_round_sky"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <EditText
                    android:id="@+id/et_email"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/text_black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/roles"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <RadioGroup
                    android:id="@+id/rg_role"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:checkedButton="@+id/rb_role_user">
                    <RadioButton
                        android:id="@id/rb_role_user"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="用户"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="5dp"/>

                    <RadioButton
                        android:id="@+id/rb_role_company"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="商户"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="5dp"/>

                    <RadioButton
                        android:id="@+id/rb_role_company_online"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="电商"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="5dp"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/shape_round_sky"
                    >
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/telephone"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/normal_text_size"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text=":"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/normal_text_size"/>
                    <EditText
                        android:id="@+id/et_telephone"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/text_black"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_get_vericode"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="获取验证码"
                    android:padding="10dp"
                    android:background="@drawable/btn_round_selector"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/shape_round_sky"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/vericode"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=":"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/normal_text_size"/>
                <EditText
                    android:id="@+id/et_vericode"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/text_black"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_register"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/btn_round_selector"
                android:text="@string/register"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_black"
                android:layout_marginTop="20dp"
                android:padding="10dp"/>

        </LinearLayout202>
    </ScrollView>

</RelativeLayout>