<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:background="@color/button_gray">
        <TextView
            android:id="@+id/tv_city"
            style="@style/menu_text_style"
            android:text="修改密码"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_round_sky">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/username"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=":"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>
        <TextView
            android:id="@+id/tv_username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/shape_round_sky"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/pre_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=":"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:id="@+id/et_pre_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_black"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/shape_round_sky"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=":"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:id="@+id/et_new_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_black"
            android:inputType="textPassword"/>
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/shape_round_sky"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/comfirm_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=":"
            android:textColor="@color/text_black"
            android:textSize="@dimen/normal_text_size"/>
        <EditText
            android:id="@+id/et_comfire_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/text_black"
            android:inputType="textPassword"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_modify"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="修改密码"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/text_black"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/btn_round_selector"/>
     </LinearLayout>
</LinearLayout>